--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
     color: var(--accent-hover);
   }
 
-  /* 🧭 Catalog now full-page grid */
+  /* 🌟 Catalog thumbnails grid */
   #catalogPanel {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-    gap: 12px;
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+    gap: 16px;
     width: 100%;
     max-width: 1280px;
     padding: 10px;
@@ -146,7 +146,8 @@
 
   .catalog-thumb {
     width: 100%;
-    border-radius: 10px;
+    height: 160px;
+    border-radius: 12px;
     cursor: pointer;
     transition: transform 0.2s, border-color 0.2s;
     border: 1px solid #333;
@@ -158,7 +159,7 @@
     border-color: var(--accent);
   }
 
-  /* 🌸 Idol buttons (left side) */
+  /* 🌸 Idol buttons */
   #idolButtons {
     position: fixed;
     top: 0;
@@ -215,6 +216,7 @@
     color: var(--accent);
   }
 
+  /* 🌸 Category buttons */
   .category-btn {
     background: var(--card);
     border: 1px solid #333;
@@ -239,6 +241,34 @@
     color: var(--accent);
   }
 
+  /* 🌈 Overlay player */
+  #overlayPlayer {
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: rgba(0,0,0,0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.2s;
+  }
+
+  #overlayPlayer video {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 12px;
+  }
+
+  #overlayPlayer.show {
+    visibility: visible;
+    opacity: 1;
+  }
+
 </style>
 </head>
 <body>
@@ -255,17 +285,16 @@
   <div class="toggle" id="categoryToggle"><span id="categoryLabel">Categories</span></div>
 </div>
 
-<!-- 🩷 Idol buttons now floating on left -->
 <div id="idolButtons"></div>
-
-<!-- 🌸 Category panel (slides out beside idol buttons) -->
 <div id="categoryPanel"></div>
-
-<!-- Catalog thumbnails now full-page grid -->
 <div id="catalogPanel"></div>
 
+<!-- Overlay player -->
+<div id="overlayPlayer">
+  <video id="videoPlayer" controls></video>
+</div>
+
 <script>
-// 🖼️ + 🎥 Combined sources
 const MEDIA_URL = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/idol_gallery_links.txt";
 const MEDIA_URL_02 = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/idol_gallery_links_02.txt";
 
@@ -275,7 +304,6 @@ let currentIdolFilter = null;
 let currentCategoryFilter = null;
 let categories = [];
 
-/* DOM */
 const searchInput = document.getElementById("searchInput");
 const searchBtn = document.getElementById("searchBtn");
 const suggestionsEl = document.getElementById("suggestions");
@@ -284,8 +312,9 @@ const catalogToggle = document.getElementById("catalogToggle");
 const idolButtonsEl = document.getElementById("idolButtons");
 const categoryPanel = document.getElementById("categoryPanel");
 const categoryToggle = document.getElementById("categoryToggle");
+const overlayPlayer = document.getElementById("overlayPlayer");
+const videoPlayer = document.getElementById("videoPlayer");
 
-/* Parser and functions */
 function parseCatalogText(text) {
   const lines = text.split("\n").map(l => l.trim()).filter(Boolean);
   return lines.map(line => {
@@ -360,9 +389,21 @@ function renderCatalogThumbnails() {
     img.src = item.thumb || item.raw || item.url;
     img.className = "catalog-thumb";
     img.title = item.folder;
+    img.onclick = () => showPlayer(item.raw);
     catalogPanel.appendChild(img);
   });
 }
+
+function showPlayer(url) {
+  videoPlayer.src = url;
+  overlayPlayer.classList.add("show");
+}
+
+overlayPlayer.addEventListener("click", () => {
+  videoPlayer.pause();
+  videoPlayer.src = "";
+  overlayPlayer.classList.remove("show");
+});
 
 function renderIdolButtons(list = null) {
   idolButtonsEl.innerHTML = "";
@@ -418,7 +459,6 @@ function toggleCategoryFilter(cat, btn) {
   applyFilters();
 }
 
-/* Event listeners */
 searchBtn.addEventListener("click", () => handleSearch(searchInput.value));
 searchInput.addEventListener("input", () => handleSearch(searchInput.value));
 catalogToggle.addEventListener("click", () => {
@@ -434,7 +474,6 @@ document.addEventListener("click", (e) => {
   }
 });
 
-/* Load catalog */
 async function loadCatalog() {
   const [res1, res2] = await Promise.all([fetch(MEDIA_URL), fetch(MEDIA_URL_02)]);
   const txt1 = await res1.text();
